# langchain-kserve

./: .gitignore  .gitlab-ci.yml  README.md
python/: README.md  pyproject.toml
python/langchain_kserve/: __init__.py  _common.py  _openai_compat.py  _v2_protocol.py  chat_models.py  embeddings.py  llms.py
python/src/: _v2_protocol.py
python/tests/integration_tests/: test_chat_models.py  test_llms.py
python/tests/unit_tests/: test_chat_models.py  test_embeddings.py  test_llms.py  test_openai_compat.py  test_v2_protocol.py
typescript/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
typescript/src/: chat_models.ts  client.ts  embeddings.ts  errors.ts  index.ts  llms.ts  openai-compat.ts  types.ts  utils.ts  v2-protocol.ts
typescript/tests/integration/: chat_models.test.ts  llms.test.ts
typescript/tests/unit/: chat_models.test.ts  client.test.ts  embeddings.test.ts  errors.test.ts  llms.test.ts  openai-compat.test.ts  utils.test.ts  v2-protocol.test.ts
