[tool.poetry]
name = "langchain-kserve"
version = "0.1.0"
description = "LangChain integration for KServe inference services"
authors = ["bitkaio LLC"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/bitkaio/langchain/kserve-provider"
repository = "https://gitlab.com/bitkaio/langchain/kserve-provider"
keywords = ["langchain", "kserve", "llm", "kubernetes", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "langchain_kserve"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain-core = ">=1.2.10,<2.0.0"
httpx = ">=0.25.0"
pydantic = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
pytest-asyncio = ">=0.21"
pytest-cov = ">=4.1"
respx = ">=0.20"
mypy = ">=1.5"
ruff = ">=0.1"
types-requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["langchain_kserve"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_core.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: mark test as integration test (requires live KServe endpoint)",
]
